--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
-    "name": "gitonomy/gitlib",
+    "name": "cstretton/gitlib-fork",
     "description": "Library for accessing git",
     "license": "MIT",
+    "replace": {
+        "gitonomy/gitlib": "1.3.x-dev"
+    },
     "authors": [
         {
             "name": "Graham Campbell",
